# smalldata_tools

./: .gitignore  README.md  SmallDataAna_dev.py  pyproject.toml  setup.py
arp_scripts/: cubeRun.sh  file_location.py  lets_cube_lcls2.sh  make_svd_basis.sh  parse_calib_v2_timing.py  run_smd2.sh  setup_hosts_openmpi.sh  submit_cube.sh  submit_jt_cal.sh  submit_plots.sh  submit_small_data.sh  submit_small_data_inner.sh  submit_small_data_outer.sh  submit_smd.sh  submit_smd2.sh  submit_tiff.sh
examples/: BeamlineSummaryPlots.py  CheckEpixConfig.py  DataqualityPlots.py  Epix10k_calib_writeTeset.py  GhostFitData.py  GhostFitFit.py  LoadSmallDataAna.py  MakeCube.py  MakeCube_default.py  MakeCube_test.py  MakeCube_xcslq0815.py  MakeCube_xcslr6316_org.py  MakeCube_xcslt4017.py  MakeCube_xcslu5817.py  MakeCube_xcsx24915.py  MakeCube_xcsx35617.py  MakeCube_xppls2416.py  MakeCube_xppls2416_test.py  MakeCube_xppls9317.py  MakeCube_xpplt3317.py  MakeLocalPedestal.py  PedestalPlot.py  PickedEventsCube.py  PickedEventsCube_xcslq2215.py  PickedEventsCube_xppx23915.py  PickedEventsCube_xppx23915_zylaoff.py  SaveAvImage.py  SmallDataAnaLive_xpp00316_Example.ipynb  SmallDataAnaLive_xpp12816_Example.ipynb  SmallDataProducer.py  SmallDataProducerFrame.py  SmallDataProducer_cxi06716.py  SmallDataProducer_cxix34517.py  SmallDataProducer_default.py  SmallDataProducer_jf4m.py  SmallDataProducer_meclu5717.py  SmallDataProducer_mfxlu5017.py  SmallDataProducer_new.py  SmallDataProducer_sxrcom11.py  SmallDataProducer_sxrm2316.py  (+55 more)
lcls1_producers/: BldEpics.py  LoadSmallDataAna.py  letsCube.py  (+11 more)
(+229 files in other folders)
