[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# addopts = "-rA"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[%(levelname)6s] %(message)s"


[tool.black]
line-length = 88
target-version = ['py39']
extend-exclude = '''(
    .*.sh
    #| .*.another_extension
    | README
)'''
